# TinyAya_MapHallu

./: .gitignore  CONTEXT.md  README.md  main.py  pyproject.toml
CMDR/: CMDR_Readme.md  Plot_metrics.py  helpers.py
CMDR/data/: cmdr_predictions.csv  cmdr_sample_metrics.csv  cmdr_summary.json
CMDR/plots/: cmdr_english_summary.csv  cmdr_pair_summary.csv
Cross Language Consistency/: collect_data.py  prompt_loader.py
Prompt Sensitivity Score/: .env.example  .gitignore  README.md  collect_data.py  model_client.py  prompt_variants.py  pyproject.toml
Prompt Sensitivity Score/analysis/: compute_pss.py  pss_results.csv  pss_scores.csv  pss_summary.txt  run_metadata.json  unstable_prompts.csv
Prompt Sensitivity Score/config/: __init__.py  experiment_config.py
Prompt Sensitivity Score/data/: raw_outputs.json  run_summary.csv  sample_outputs.jsonl
Prompt Sensitivity Score/plots/: plot_pss.py  plot_pss_clean.py
Prompt Sensitivity Score/src/: collect_data.py  helpers.py
Prompt Sensitivity Score/tests/: test_smoke.py
Prompt Sensitivity Score/utils/: embedding_utils.py  entity_utils.py  validate_dataset.py
hallucination-rate/: README.md  config.py  evaluate.py  experiment_1_out_of_region.py  experiment_2_in_region.py  metrics.py  model_client.py  plotting.py  requirements.txt  run_experiments.py
hallucination-rate/data/: __init__.py  load_mkqa.py
run_experiments/: PLAN.md  model_client.py  requirements.txt  run.py
run_experiments/config/: default.yaml  settings.py
run_experiments/data/: load_mkqa.py  load_xnli.py
src/: helpers.py
(+8 files in other folders)
